--- a/sections/product-detail.liquid
+++ b/sections/product-detail.liquid
@@ -26,7 +26,7 @@
     color: #212121;
     font-size: 22px;
     font-size: calc(16px + (22 - 16) * ((100vw - 360px) / (1920 - 360)));
-    font-weight: 500;
+    font-weight: bold;
     line-height: 1;
     margin: 0;
     }
