Fixed related product card issues

--- a/snippets/related-product-card.liquid
+++ b/snippets/related-product-card.liquid
@@ -14,7 +14,7 @@
     <a href="{{ card_product.url }}" class="product-card-link">
       <img src="{{ card_product.featured_image | image_url: width: 400, height: 400, format: 'webp' }}"
            class="main-image" loading="lazy"
-           alt="{{ card_product.title }}" width="400" height="400">
+           alt="{{ card_product.title }}" width="100%" height="100%">
     </a>
     <div class="thumbnail-wrapper">
       {% for image in card_product.images limit: 15 %}
