--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -26,7 +26,7 @@ cart-items .title-wrapper-with-link {
 }
 table.cart-items {
     border: 1px solid #f1f1f1;
-    border-radius: 11px;
+    border-radius: 0 0 11px 11px;
 }
 .cart-item__quantity-wrapper {
   display: flex;
