update: show dynamic navigation for swiper

--- a/sections/recommended-products.liquid
+++ b/sections/recommended-products.liquid
@@ -226,11 +226,11 @@
 
                 const previous = document.querySelector('.recommended-section .prev-next-button .item-prev');
                 if (previous) {
-                  previous.style.display = hasOverflow ? 'block' : 'none';
+                  previous.style.display = hasOverflow ? 'flex' : 'none';
                 }
                 const next = document.querySelector('.recommended-section .prev-next-button .item-next');
                 if (next) {
-                  next.style.display = hasOverflow ? 'block' : 'none';
+                  next.style.display = hasOverflow ? 'flex' : 'none';
                 }
               };
 
