update: base.css arial font coming which should not coming. (fixed)

--- a/assets/base.css
+++ b/assets/base.css
@@ -1832,7 +1832,9 @@ details[open] > .share-button__fallback {
 .share-button__message:not(:empty):not(.hidden) ~ * {
     display: none;
 }
-
+button {
+  font-family: var(--font-body-family);
+}
 /* component-form */
 .field__input,
 .select__select,
