--- a/assets/home-page-product.css
+++ b/assets/home-page-product.css
@@ -304,4 +304,17 @@
         display: flex;
         gap: 20px;
     }
+    .tabs-wrapper .tab_heading {
+        position: relative;
+        padding-right: 15px;
+    }
+    .tabs-wrapper .tab_heading::before {
+        content: '';
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 2px;
+        height: 100%;
+        background: linear-gradient(to bottom, #f8f8f8, #898989b3, #f8f8f8);
+    }
 }
