--- a/assets/base.css
+++ b/assets/base.css
@@ -2309,8 +2309,8 @@ input[type="checkbox"] {
     justify-content: center;
     align-items: center;
     font-size: 0.9rem;
-    bottom: 0.8rem;
-    left: 2.2rem;
+    top: -1.2rem;
+    right: -0.8rem;
     line-height: calc(1 + 0.1 / var(--font-body-scale));
 }
 
