--- a/sections/faq-contact.liquid
+++ b/sections/faq-contact.liquid
@@ -19,6 +19,7 @@
     .faq-container.collapsible-content__wrapper .collapsible-content-wrapper-narrow {
     width: 100%;
     max-width: 100%;
+    padding: 0;
     }
     .faq-container.collapsible-content__wrapper .collapsible-content-wrapper-narrow .accordion summary .accordion__title {
     font-weight: 600;
@@ -46,7 +47,7 @@
     padding: 2rem 0;
     }
     .faq-container.collapsible-content__wrapper .collapsible-content-wrapper-narrow .accordion  details summary {
-    padding: 0 20px;
+    padding: 0;
     }
     .faq-container.collapsible-content__wrapper .collapsible-content-wrapper-narrow .accordion  details .accordion__content {
     padding: 0 2rem 2.5rem;
@@ -82,27 +83,10 @@
     padding-bottom: {{ section.settings.padding_bottom }}px;
     }
     }
-    @media screen and (min-width: 768px) {
-    .faq-container.collapsible-content__wrapper {
-    padding-inline: 30px;
-    }
-    }
-    @media screen and (max-width: 768px) {
-    .faq-container.collapsible-content__wrapper {
-    padding-inline: 15px;
-    }
-    }
-    @media screen and (min-width: 992px) {
-    .faq-container.collapsible-content__wrapper {
-    padding-inline: 50px;
-    max-width: 1600px;
-    margin: auto;
-    }
-    }
 {%- endstyle -%}
 <div class="color-{{ section.settings.color_scheme }} gradient">
     <div class="collapsible-content collapsible-{{ section.settings.layout }}-layout isolate{% if section.settings.layout == 'section' %} page-width{% elsif section.settings.layout == 'none' %} content-container content-container--full-width{% endif %}">
-        <div class="faq-container collapsible-content__wrapper section-{{ section.id }}-padding{% if section.settings.layout == 'section' %} content-container color-{{ section.settings.container_color_scheme }} gradient{% endif %}">
+        <div class="faq-container page-width collapsible-content__wrapper section-{{ section.id }}-padding{% if section.settings.layout == 'section' %} content-container color-{{ section.settings.container_color_scheme }} gradient{% endif %}">
 
             <div class="{% if section.settings.image == blank %}collapsible-content-wrapper-narrow{% else %}page-width{% endif %}">
                 <div class="faq-content">
