--- a/assets/section-contact-form.css
+++ b/assets/section-contact-form.css
@@ -37,18 +37,15 @@
       justify-content: center;
       align-items: center;
 }
-.sprinix-kart-contact-us button:hover {
-  background:white;
-  color:black;
-}
 @media screen and (min-width: 768px) {
  .sprinix-cart-box-wrapper .sprinix-kart-contact-us {
-        padding-top: 50px;
-        padding-bottom: 50px;
+        padding: 50px;
   }
 }
 @media screen and (max-width: 768px) {
-  
+    .sprinix-cart-box-wrapper .sprinix-kart-contact-us {
+        padding: 20px;
+    }
 }
   .sprinix-cart-box-wrapper {
         margin-left: 14px;
