--- a/sections/faq-contact.liquid
+++ b/sections/faq-contact.liquid
@@ -47,7 +47,7 @@
     padding: 2rem 0;
     }
     .faq-container.collapsible-content__wrapper .collapsible-content-wrapper-narrow .accordion  details summary {
-    padding: 0;
+    padding: 0 10px;
     }
     .faq-container.collapsible-content__wrapper .collapsible-content-wrapper-narrow .accordion  details .accordion__content {
     padding: 0 2rem 2.5rem;
