--- a/snippets/cstm-card-collection.liquid
+++ b/snippets/cstm-card-collection.liquid
@@ -140,7 +140,7 @@
                              {% endif %}
                              class="button button--primary"
                            >
-                             SHOP NOW
+                            Shop Now
                            </a>
                            </div>
 
