--- a/sections/cstm-footer.liquid
+++ b/sections/cstm-footer.liquid
@@ -89,7 +89,7 @@
     .footer-section-menu-block  .newsletter-form__field-wrapper .field {
     flex-wrap: wrap;
     gap: calc(15px + 25 * ((100vw - 360px) / (1920 - 360)));
-    margin-top: calc(30px + 30 * ((100vw - 360px) / (1920 - 360)));
+    margin-top: calc(20px + 20 * ((100vw - 360px) / (1920 - 360)));
     }
     .footer-section-menu-block  .newsletter-form__button.field__button {
     max-width: 100%;
@@ -175,7 +175,7 @@
     .di {
     display: flex;
     flex-direction: column;
-    gap: calc(10px + 12 * ((100vw - 360px) / (1920 - 360)));
+    gap: 5px;
     }
     footer h2.footer-block__heading {
     font-size: calc(30px + 10 * ((100vw - 360px) / (1920 - 360)));
