--- a/assets/base.css
+++ b/assets/base.css
@@ -1381,6 +1381,7 @@ button.shopify-payment-button__button--unbranded {
     justify-content: center;
     align-items: center;
     border: 0;
+    padding: 12px 24px;
     cursor: pointer;
     font-size: 1.5rem;
     text-decoration: none;
@@ -1528,8 +1529,8 @@ button.shopify-payment-button__button--unbranded {
 }
 
 .sp-fliter svg.icon.icon-caret {
-    height: auto;
-    margin: 0 10px;
+    margin: 0 5px;
+    width: 15px;
 }
 
 .sp-fliter .dropdown_active {
