update: fixed the quick-add click give a error when go through search url (fixed).

--- a/sections/main-search.liquid
+++ b/sections/main-search.liquid
@@ -13,6 +13,7 @@
 {%- endif -%}
 
 <script src="{{ 'main-search.js' | asset_url }}" defer="defer"></script>
+<script src="{{ 'quick-add.js' | asset_url }}" defer="defer"></script>
 
 <style>
   .template-search__header {
