--- a/sections/choose-your-action.liquid
+++ b/sections/choose-your-action.liquid
@@ -159,7 +159,9 @@
             padding: 0;
             width: fit-content;
     }
-
+.action-labels .action-label {
+ margin-bottom: 2px;
+}
     .choose-action-left .action-label .action-label-link {
             font-weight: bold;
             padding-bottom: calc(18px + (25 - 18) * ((100vw - 360px) / (1920 - 360)));
