--- a/sections/featured-collection-grid.liquid
+++ b/sections/featured-collection-grid.liquid
@@ -104,6 +104,7 @@
       {% endcase %}
 
       <div class="featured-card">
+      <a href="{{ product.url }}">
         {% if block.settings.custom_image != blank %}
           <img src="{{ block.settings.custom_image | image_url: width: 600 ,height:400 }}" alt="{{ collection.title | escape }}" width="600" height="400" loading="{% if forloop.first %}eager{% else %}lazy{% endif %}" {% if forloop.first %}fetchpriority="high"{% endif %}>
         {% else %}
@@ -128,6 +129,7 @@
             {% endif %}
           </div>
         </div>
+        </a>
       </div>
     {% endif %}
   {% endfor %}
